# open-r4u

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TOKENS_METADATA_FEATURE.md  compose.yaml
backend/: Dockerfile  HYBRID_GROUPING_SUMMARY.md  TASK_GROUPING.md  models.yaml  pyproject.toml  test_cors.sh
backend/app/: config.py  database.py  enums.py  main.py
backend/app/models/: __init__.py  base.py  evaluation.py  executions.py  http_traces.py  optimizations.py  projects.py  providers.py  tasks.py  traces.py
backend/app/schemas/: evaluation.py  executions.py  http_traces.py  optimizations.py  projects.py  providers.py  tasks.py  traces.py
backend/app/services/: encryption.py  evaluation_service.py  executions_service.py  executor.py  grading_service.py  http_trace_parser.py  implementation_matcher.py  implementation_service.py  openai_client.py  optimization_service.py  pricing_service.py  project_service.py  provider_service.py  task_grouping.py  task_grouping_queue.py  task_service.py  template_inference.py  traces_service.py
backend/app/utils/: __init__.py  cost.py  statistics.py
backend/app/workers/: task_grouping_worker.py
backend/docs/: BACKGROUND_TASK_GROUPING.md  CHANGELOG_consecutive_word_detection.md  HTTP_TRACING.md  PARSER_ARCHITECTURE.md  PARSER_REFACTORING.md  PROVIDER_MANAGEMENT.md  TIME_WEIGHTED_STATISTICS.md  consecutive-word-template-detection.md  implementation-model-migration.md  implementation-versions.md  model-settings-vs-metrics.md  output_items.md
backend/examples/: consecutive_word_template_demo.py  trace_example.py
backend/migrations/: env.py
backend/migrations/versions/: 000cc9671af9_add_prompt_variables_to_trace.py  00d6b6e483a7_.py  0de4274850ee_add_request_parameters_to_tasks.py  105bd027cb07_add_http_trace_table.py  15713a389320_add_path_to_tasks.py  2598b50e3e46_add_tool_support_to_traces.py  25b0e0bf095e_add_evaluation_id_and_test_case_id.py  2ab7f18e5ff7_restructure_traces_to_match_openai_api.py  2e10e12d3f5b_add_http_path_and_http_method_to_http_.py  3231e64230a3_add_cost_to_execution_result.py  33070573efab_add_projects_and_update_traces.py  37309a4b1b2f_add_name_and_description_to_tasks.py  5364e89c8105_add_implementation_model.py  53914fdc7590_add_optimization_model.py  5cd8050268df_add_trace_request_parameters_and_.py  6e7f0392eb1e_convert_reasoning_to_object.py  7a8b9c0d1e2f_add_execution_result_table.py  7bb407e66f29_create_trace_table.py  8b6699fbf9aa_add_project_id_to_http_trace.py  94fea38d9635_remove_project_id_field_from_http_trace.py  956d760ec79d_add_max_tokens_to_trace.py  9b2a3b6f3c5d_drop_best_fields_from_optimization.py  a4fe3ce0bf4f_add_provider_and_model_tables.py  aaa838502c9d_add_path_to_trace_table.py  c166fc620924_add_tokens_schema_metadata_to_traces.py  c8ea798be286_change_traces_to_reference_.py  cb5cec1b033d_add_grader_and_grade.py  d489e2f7e044_.py  d4e5f6a7b8c9_add_task_model_and_task_id_to_traces.py  dcf37b064cb9_add_trace_evaluation_percentage_to_.py  dd2f7ffcfe5a_add_implementation_versions_to_tasks.py  dfaa9df466bf_change_test_case_output_to_json.py  e8535e383ae8_update_contract_and_args.py  e85591d36b7d_evaluation_and_testing.py  ee91575c2c42_update_trace_output.py  f58158b8ecde_.py
backend/tests/: README.md  __init__.py  conftest.py  test_auto_create_implementation.py  test_auto_grouping.py  test_consecutive_word_template.py  test_encryption.py  test_evaluation_comprehensive.py  test_evaluation_config.py  test_evaluation_integration.py  test_evaluation_models.py  test_evaluation_service.py  test_evaluations_api.py  test_execution_cost_integration.py  test_executions.py  test_grade_api.py  test_grader_api.py  test_grading_service.py  test_http_traces.py  test_implementation_matcher.py  test_implementations.py  test_optimization_service.py  test_pricing_edge_cases.py  test_pricing_service.py  test_projects.py  test_provider_service.py  test_providers_api.py  test_task_grouping.py  test_task_grouping_integration.py  test_task_grouping_queue.py  test_task_statistics.py  test_tasks.py  test_template_finder.py  test_template_inference.py  test_test_cases_api.py  test_trace_implementation_matching.py  test_traces.py  test_traces_ai_score.py  test_traces_service.py
backend/tests/services/: test_auto_grading_trigger.py  test_background_grading.py
sdks/python/: README.md  demo.py  pyproject.toml
sdks/python/docs/: CALL_PATH_FEATURE.md  HTTP_FILE_UPLOAD_INTERCEPTION.md  HTTP_TRACING_SCHEMA.md  LANGCHAIN_INTEGRATION.md  LANGCHAIN_QUICKSTART.md  MIGRATION_SUMMARY.md  OPENAI_STREAMING_TRACING_SOLUTION.md  RAW_TRACING_RECOMMENDATIONS.md
sdks/python/examples/: README.md  __init__.py  advanced_langchain.py  aiohttp_example.py  aiohttp_monkey_patch_demo.py  anthropic_example.py  async_openai.py  async_openai_example.py  async_openai_pure_demo.py  basic_langchain.py  basic_openai.py  comprehensive_http_monkey_patch_demo.py  comprehensive_openai_example.py  constructor_interception_demo.py  debug_file_upload.py  enhanced_file_tracing.py  file_upload_detection_demo.py  file_upload_example.py  google_genai_example.py  httpx_monkey_patch_demo.py  httpx_streaming_example.py  httpx_vs_openai_demo.py  langchain_example.py  langchain_google_genai_example.py  langchain_openai_example.py  langchain_structured_output.py  langchain_token_tracking.py  openai_streaming_demo.py  openai_streaming_simple_demo.py  openai_tracing_example.py  (+16 more)
(+195 files in other folders)
