[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.119.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.29.0",
    "uvicorn[standard]>=0.32.0",
    "loguru>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.11",
    "litellm>=1.78.6",
]

[tool.ruff]
extend-exclude = ["alembic"]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",
    "ANN204",
    "D100",
    "D107",
    "E501",
    "INP001",
    "EM101",
    "TRY003",
    "S106",
    "TRY300",
    "TRY301",
    "G004",
    "EM102"
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "FBT",
    "PLR2004",
    "S311",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "T201",
    "D103",
    "S105",
    "SLF001"
]
