[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r4u"
version = "0.1.0"
description = "Observability SDK for LLM applications"
readme = "README.md"
authors = [{name = "R4U Team"}]
license = {text = "Apache 2.0"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.2",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.2.0"]
aiohttp = ["aiohttp>=3.8.0"]
requests = ["requests>=2.25.0"]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude legacy tests from old API-based tracing system
norecursedirs = ["tests/legacy", "tests/manual"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
