[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r4u"
version = "0.1.5"
description = "Observability SDK for LLM applications"
readme = "README.md"
authors = [{name = "R4U Team"}]
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
dependencies = [
    "async-trace>=0.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.2",
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "requests>=2.32.5",
    "openai>=2.4.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.1",
    "build>=1.3.0",
]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.8.0"]
requests = ["requests>=2.25.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude legacy tests from old API-based tracing system
norecursedirs = ["tests/legacy", "tests/manual"]

[tool.ruff]
extend-exclude = ["alembic"]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",
    "ANN204",
    "D100",
    "D107",
    "E501",
    "INP001",
    "EM101",
    "TRY003",
    "S106",
    "TRY300",
    "TRY301",
    "G004",
    "EM102"
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "FBT",
    "PLR2004",
    "S311",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "T201",
    "D103",
    "S105",
    "SLF001"
]
